--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-loader-spinner": "^5.1.5",
     "react-radio-buttons": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
